# NP-hard-scenario

./: .gitignore  README.md  scenario5.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Math1.hs  Math2.hs  Parsing.hs  Types.hs  Vector.hs
