name:                scenario5
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/scenario5#readme
license:             BSD3
license-file:        LICENSE
author:              Janos Potecki
maintainer:          janospotecki et outlook dot com
copyright:           2017 Janos Potecki
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
                     , Math1
                     , Parsing
  build-depends:       base >= 4.7 && < 5
                     , cubicbezier
                     , parallel
                     , deepseq
                     , parsec
  default-language:    Haskell2010

executable scenario5-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scenario5
  default-language:    Haskell2010

test-suite scenario5-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scenario5
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/scenario5
